# cardputer_adv_ssh

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  partitions.csv  sdkconfig.defaults
.github/workflows/: firmware-release.yml
components/libvterm/: CMakeLists.txt  README.codex.md
docs/: architecture.md
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/app/: app_controller.cpp  app_controller.h
main/drivers/: display.cpp  display.h  hardware_config.h  keyboard.cpp  keyboard.h  tca8418.cpp  tca8418.h
main/net/: wifi_manager.cpp  wifi_manager.h
main/ssh/: ssh_client.cpp  ssh_client.h
main/storage/: settings_store.cpp  settings_store.h
main/terminal/: terminal_emulator.cpp  terminal_emulator.h
main/ui/: text_input.cpp  text_input.h  ui_app.cpp  ui_app.h
main/util/: string_utils.cpp  string_utils.h
main/web/: web_server.cpp  web_server.h
